--- a/assets/style.css
+++ b/assets/style.css
@@ -14,7 +14,6 @@ hr {
     border-bottom: 1px solid #ffffff;
  }
 
-.selfie {
-    max-width: 100%;
-    height: auto;
+.h2 {
+    margin-top: 10px;
 }
